[FIX] prevent navbar from overlapping content and moved page caused by scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+}
